# ndsd-read

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: dst_bench.rs  dst_check.rs  dst_compare.rs  dst_compare2.rs  dst_compare3.rs  dst_verify.rs
foob_dstdec/: CMakeLists.txt
foob_dstdec/sources/: LICENSE  ac.h  common.h  consts.h  ct.h  ct_enc.h  decoder.cpp  decoder.h  dst_decoder.cpp  dst_decoder.h  dst_engine.h  dst_wrapper.cpp  dst_wrapper.h  fh.h  fr.h  segment.h  stream.h
src/: dff_reader.rs  dsf_reader.rs  lib.rs
src/dst_dec/: mod.rs
